kubernetes/wazuh/wazuh-dashboard/wazuh-dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-dashboard-service
  namespace: wazuh
spec:
  ports:
  - port: 443
    targetPort: 5601
  selector:
    app: wazuh
  type: LoadBalancer
